--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root{
+  width: 100vw;
+  height: 100vh;
+  background-color: #333;
 }
